--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"start": "npm-run-all --parallel open:src lint:watch test:watch",
 		"lint": "node_modules/.bin/esw webpack.config.* src tools",
 		"lint:watch": "npm run lint -- --watch",
+		"lint:fix": "npm run lint -- --fix",
 		"test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
 		"test:watch": "npm run test -- --watch"
 	},
