--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"lint": "node_modules/.bin/esw webpack.config.* src tools",
 		"lint:watch": "npm run lint -- --watch",
 		"lint:fix": "npm run lint -- --fix",
-		"test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
+		"test": "mocha --reporter spec tools/testSetup.js \"src/**/*.spec.js\"",
 		"test:watch": "npm run test -- --watch"
 	},
 	"dependencies": {
